# dynasty

./: Containerfile  LICENSE.txt  README.md  compose.yml  home.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  pull-request.yml
.streamlit/: config.toml
data/: dynastyprocess-standard.csv  dynastyprocess-superflex.csv  keeptradecut-standard.csv  keeptradecut-superflex.csv  players.csv
dynasty/: __about__.py  __init__.py  __main__.py  db.py  models.py  util.py
dynasty/import/: __main__.py  github.py
dynasty/service/: dynasty_process.py  keeptradecut.py  sleeper.py  soup.py
dynasty/streamlit/: home.py  ktc-standard.csv
dynasty/streamlit/pages/: roster.py
tests/: test_utils.py
